--- a/02_Inner_Products_and_Norms/047-orthogonal_matrices.ipynb
+++ b/02_Inner_Products_and_Norms/047-orthogonal_matrices.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "---\n",
     "title: The Gram-Schmidt Process\n",
-    "subject: Inner Products and Norms\n",
+    "subject: Orthogonal Matrices and the QR Decomposition\n",
     "subtitle: \n",
-    "short_title: The Gram-Schmidt Process\n",
+    "short_title: Orthogonal Matrices and the QR Decomposition\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: Gram-Schmidt\n",
+    "keywords: Orthogonal Matrix, QR Decomposition\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -31,157 +31,135 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA 4.2.\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA 4.3.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the Gram-Schmidt process for finding an orthogonal basis of a vector space?"
+    "- What is an orthogonal matrix?\n",
+    "- What is the QR decomposition of a square matrix?\n",
+    "- How can we use the QR decomposition to solve systems of equatitons of the form $A\\vv{x} = \\vv b$, with $A$ square?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Gram-Schmidt Process\n",
+    "# Orthogonal Matrices\n",
     "\n",
-    "Hopefully we've convinced you that orthogonal bases are useful, so now the natural question becomes: how do I compute one? That's where the famed Gram-Schmidt process (GSP) comes into play.\n",
+    "Rotations and reflections play key roltes in geomtry, physics, robotics, quantum mechanics, airplans, compute graphics, data science, and more. These transformations are encoded via *orthogonal matrices*, that is matirces whose columns form an orthonormal basis for $\\mathbb{R}^n$. They also play a centrla role in one of the most important methods of linear algebra, the *QR decomposition*.\n",
     "\n",
-    "The idea behind GSP is farily straightforward: given an initial basis for a vector space, iteratively modify until it is orthogonal. Let's start with a simple concrete example, and then introduce the general algorithm:\n",
+    "We start with a definition.\n",
     "\n",
-    ":::{prf:example} Finding an orthogonal basis\n",
-    ":label: computing-orthogonal-basis-ex\n",
+    ":::{prf:definition} Orthogonal Matrix\n",
+    ":label: orthogonal-matrix-defn\n",
     "\n",
-    "Let $W = \\text{span}\\{\\vv{x_1}, \\vv{x_2}\\}$, where $\\vv{x_1} = \\bm 3\\\\6\\\\0 \\em$ and $\\vv{x_2} = \\bm 1\\\\2\\\\2 \\em$.\n",
-    "\n",
-    "Since $\\vv{x_1}$ and $\\vv{x_2}$ are linearly independent (why?), they form a basis for the subspace $W \\subseteq \\mathbb{R}^3$, where $\\text{dim}(W) = 2$.\n",
-    "\n",
-    "However, $\\vv{x_1}$ and $\\vv{x_2}$ are not [orthogonal](#orthogonal-defn) because\n",
+    "A square matrix $Q$ is called *orthogonal* if it satisfies \n",
     "\n",
     "\\begin{align*}\n",
-    "    \\langle \\vv{x_1}, \\vv{x_2}\\rangle = 3(1) + 6(2) + 0(2) = 15.\n",
+    "    QQ^{\\top} = Q^{\\top}Q = I.\n",
     "\\end{align*}\n",
     "\n",
-    "Let's use $\\{\\vv{v_1}, \\vv{v_2} \\}$ for our new basis, and set $\\vv{v_1} = \\vv{x_1}$. We need to find a vector $\\vv{v_2}$ that is orthogonal to $\\vv{v_1}$ such that $\\text{span}\\{\\vv{v_1}, \\vv{v_2}\\} = W$.\n",
+    "This means that $Q^{-1} = Q^{\\top}$ (in fact, we could define orthogonal matrices this way instead), and that solving linear systems of the form $Q\\vv x = \\vv b$ is very easy: simply set $\\vv x = Q^\\top \\vv b$!\n",
     "\n",
-    "Let's look at a picture first:\n",
-    "\n",
-    "![Parallel and perpendicular components of $\\vv{x_2}$ along $\\vv{v_1}$](../figures/04-gram_schmidt.png)\n",
-    "\n",
-    "From this picture, we observe that we can write $\\vv{x_2} = \\vv p  +\\vv{v_2}$ where $\\vv{p}$ is the component of $\\vv{x_2}$ parallel with $\\vv{x_1}$ and $\\vv{v_2}$ is what's left over, i.e., the part of $\\vv{x_2}$ that is orthogonal to $\\vv{x_1} = \\vv{v_1}$.\n",
-    "\n",
-    "If $\\vv p$ is parallel with $\\vv{v_1}$, then we must have that $\\vv{p} = c\\vv{v_1}$ for some constant $c$, and therefore $\\vv{2} = \\vv{x_2} - \\vv p = \\vv{x_2} - c\\vv{v_1}$.\n",
-    "\n",
-    "Now from our [previous discussion](#coordinates-norm-orthogonal-thm), we know that $c = \\frac{\\langle \\vv{x_2}, \\vv{v_1}\\rangle}{\\|\\vv{v_1}\\|^2}$ (why?) but let's see a different way of computing $c$. We want $\\langle \\vv{v_2}, \\vv{v_1} \\rangle = 0$, so we must have:\n",
+    "Notice that $Q^\\top Q = I$ implies that the columns of $Q$ are orthonormal. If $Q = [\\vv{q_1}, ..., \\vv{q_n}]$, then \n",
     "\n",
     "\\begin{align*}\n",
-    "    \\langle \\vv{v_2}, \\vv{v_1} \\rangle = \\langle \\vv{x_2} - c\\vv{v_1}, \\vv{v_1}\\rangle = \\langle \\vv{x_2}, \\vv{v_1} \\rangle - c\\|\\vv{v_1}\\|^2 = 0\n",
+    "    (Q^\\top Q)_{ij} = \\vv{q_i}^\\top \\vv{q_j} = I_{ij} = \\begin{cases} 1 \\quad\\text{if $i \\neq j$}\\\\ 0\\quad\\text{if $i = j$}\\end{cases}\n",
     "\\end{align*}\n",
     "\n",
-    "or equivalently, $c = \\frac{\\langle \\vv{x_2}, \\vv{v_1}\\rangle}{\\|\\vv{v_1}\\|^2}$. Therefore, $\\vv{v_2} = \\vv{x_2} - \\frac{\\langle \\vv{x_2}, \\vv{v_1} \\rangle}{\\|\\vv{v_1}\\|^2} \\vv{v_1}$.\n",
+    "which is exactly the definition of an orthonormal collcetion of vectors. Further, since ther eare $n$ such vectors, they must form an [orthonormal basis](#orthonormal-basis-defn) for $\\mathbb{R}^n$. \n",
+    ":::\n",
     "\n",
-    "By construction, we have that $\\langle \\vv{v_1}, \\vv{v_2}\\rangle = 0$, and since $\\vv{v_1} = \\vv{x_1}$ and $\\vv{v_2} = \\vv{x_2} - c\\vv{x_1}$, both $\\vv{v_1}, \\vv{v_2} \\in W$. So $\\vv{v_1}$ and $\\vv{v_2}$ are linearly independent and contained in $W$ (a subspace of dimension $2$), so form a basis for $W$. \n",
+    "Now, let's explore some of the consequences of this definition.\n",
     "\n",
-    "After actually plugging in our values of $\\vv{x_1}$ and $\\vv{x_2}$, you can verify that \n",
+    ":::{prf:example} $2 \\times 2$ orthogonal matrices\n",
+    ":label: orthogonal-matrices-ex1\n",
+    "\n",
+    "A $2\\times 2$ matric $Q = \\bm a&b\\\\c&d\\em$ is orthogonal if and only if\n",
     "\n",
     "\\begin{align*}\n",
-    "    \\vv{v_1} = \\bm 3\\\\6\\\\0 \\em, \\quad \\vv{v_2} = \\bm 0\\\\0\\\\2 \\em\n",
+    " Q^\\top Q = \\bm a^2 + c^2 & ab + cd \\\\ ac + cd & b^2 + d^2\\em = \\bm 1\\\\ 0\\\\ 0\\\\ 1\\em \n",
     "\\end{align*}\n",
     "\n",
-    "is an orthogonal basis for $\\text{span}\\left\\{\\bm 3\\\\6\\\\0 \\em, \\bm 1\\\\2\\\\2 \\em\\right\\}$.\n",
+    "or equivalently\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    a^2 + c^2 = 1, \\quad ab + cd = 0, \\quad b^2 + d^2 = 1\n",
+    "\\end{align*}\n",
+    "\n",
+    "The first and last equations say that $\\bm a\\\\ c \\em$ and $\\bm b\\\\ d \\em$ lie on the unit circle in $\\mathbb{R}^2$: a convenient and revealing way of writing this is by setting\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    a = \\cos \\theta, \\quad c= \\sin \\theta, \\quad b = \\cos \\phi, \\quad d = \\sin \\phi\n",
+    "\\end{align*}\n",
+    "\n",
+    "since $\\cos^2 \\theta + \\sin^2\\theta = 1$ for all $\\theta \\in \\mathbb{R}$.\n",
+    "\n",
+    "Our last condition is $0 = ad + cd = \\cos\\theta \\cos \\phi +\\sin\\theta \\sin\\phi = \\cos(\\theta - \\phi)$. Now \n",
+    "\\begin{align*}\n",
+    "    \\cos (\\theta - \\phi) = 0 &\\iff \\theta - \\phi = \\frac{\\pi}{2} + 2 n \\pi\\quad \\text{or} \\quad \\theta - \\phi = -\\frac{\\pi}{2} \\\\\n",
+    "    &\\iff \\pi = \\theta \\pm \\frac{\\pi}{2} \n",
+    "\\end{align*}\n",
+    "\n",
+    "This means either:\n",
+    "\n",
+    "* $b = -\\sin\\theta$ and $d = \\cos\\theta$ \n",
+    "\n",
+    "* or $b = \\sin\\theta$ and $d = -\\cos \\theta$\n",
+    "\n",
+    "As a result, every $2\\times 2$ orthogonal matrix has one of two possible forms:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm \\cos\\theta & -\\sin\\theta \\\\ \\sin\\theta & \\cos\\theta \\em \\quad\\text{or}\\quad \\bm \\cos\\theta & \\sin\\theta \\\\ \\sin\\theta & -\\cos\\theta \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "where by convention, we restrict $\\theta \\in [0, 2\\pi)$.\n",
+    "\n",
+    "The columns of both matrices form an orthonormal basis for $\\mathbb{R}^2$. The first is obtained by rotating the [standard basis](#basis_eg) $\\vv{e_1}, \\vv{e_2}$ through angle $\\theta$, the second by first reflexting about the x-axis and the rotating.\n",
+    "\n",
+    "![Orthogonal matrices in $\\mathbb{R}^2$](../figures/04-orthogonal_matrix.png)\n",
     "\n",
     ":::\n",
     "\n",
-    "The Gram-Schmidt process simply repeats [this process](#computing-orthogonal-basis-ex) over and over if there are more than two vectors, but the idea remains the same: at each step you subtract off the directions of the current vector that are parallel with previous ones.\n",
-    "\n",
-    ":::{prf:algorithm} The Gram-Schmidt Process\n",
-    ":label: gram-schmidt-alg\n",
-    "\n",
-    "Given a basis $\\{\\vv{x_1}, ..., \\vv{x_p}\\}$ for a nonzero subspace $W$ of $\\mathbb{R}^n$, define\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\vv{v_1} &= \\vv{x_1}\\\\\n",
-    "    \\vv{v_2} &= \\vv{x_2} - \\frac{\\langle \\vv{x_2}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1}\\\\\n",
-    "    \\vv{v_3} &= \\vv{x_3} - \\frac{\\langle \\vv{x_3}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1} - \\frac{\\langle \\vv{x_3}, \\vv{v_2} \\rangle}{\\langle \\vv{v_2}, \\vv{v_2}\\rangle} \\vv{v_2}\\\\\n",
-    "    \\vdots\\\\\n",
-    "    \\vv{v_p} &= \\vv{x_p} - \\frac{\\langle \\vv{x_p}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1} - \\frac{\\langle \\vv{x_p}, \\vv{v_2} \\rangle}{\\langle \\vv{v_2}, \\vv{v_2}\\rangle} \\vv{v_2} - ... - \\frac{\\langle \\vv{x_p}, \\vv{v_{p-1}} \\rangle}{\\langle \\vv{v_{p-1}}, \\vv{v_{p-1}}\\rangle} \\vv{v_{p-1}}\n",
-    "\\end{align*}\n",
-    "\n",
-    "Then $\\{ \\vv{v_1}, ..., \\vv{v_p} \\}$ is an orthogonal basis for $W$. In addition\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\text{span} \\left\\{ \\vv{v_1}, ..., \\vv{v_k} \\right\\} = \\text{span} \\left\\{ \\vv{x_1}, ..., \\vv{x_k} \\right\\} \\quad\\text{for $1 \\leq k \\leq p$}.\n",
-    "\\end{align*}\n",
-    "\n",
-    ":::\n",
-    "\n",
-    "````{exercise}  Finding an orthonormal basis for a subspace of $\\mathbb{R}^4$\n",
-    ":label: gram_schmidt-ex1\n",
-    "\n",
-    "Find an orthonormal basis, with respect to the standard [dot product](#dot-product-defn), for the subspace $W\\subseteq \\mathbb{R}^n$ consisting all vectors that are [orthogonal](#orthogonal-defn) to the vector $\\vv a = (1, 2, -1, -3)$. \n",
-    "\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "First, try to find any basis for $W$! You can do this by solving the homogenous system of equations\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\bm 1&2&-1&-3 \\em \\bm x_1\\\\x_2\\\\x_3\\\\x_4 \\em = 0\n",
-    "\\end{align*}\n",
-    ":::\n",
-    "\n",
-    "```{solution} gram_schmidt-ex1\n",
-    ":class: dropdown\n",
-    "\n",
-    "The first task is th find a basis for $W$. A vector $\\vv x = (x_1, x_2, x_3, x_4)$ is orthogonal to $\\vv a$ if and only if\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\vv x \\cdot \\vv a = x_1 + 2x_2 - x_3 - 3x_4 = 0\n",
-    "\\end{align*}\n",
-    "\n",
-    "Solving this in the usual way (i.e., writing $x_1$ in terms of $x_2$, $x_3$, $x_4$), we observe that the free variables are $x_2, x_3, x_4$, so that a (non-orthogonal) basis for the subspace is\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\vv{w_1} = \\bm -2\\\\1\\\\0\\\\0\\em, \\quad \\vv{w_2} = \\bm 1\\\\0\\\\1\\\\0\\em, \\quad\\vv{w_3} = \\bm 3\\\\0\\\\0\\\\1\\em\n",
-    "\\end{align*}\n",
-    "\n",
-    "because \n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\bm x_1 \\\\x_2\\\\x_3\\\\x_4\\em = x_2 \\bm -2\\\\1\\\\0\\\\0\\em + x_3\\bm 1\\\\0\\\\1\\\\0\\em + x_4\\bm 3\\\\0\\\\0\\\\1 \\em\n",
-    "\\end{align*}\n",
-    "\n",
-    "Now we apply Gram-Schmidt to obtain an orthogonal basis: first we set $\\vv{v_1} = \\vv{w_1}$. To get $\\vv{v_2}$, we compute:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\vv{v_2}  = \\vv{w_2} - \\frac{\\langle \\vv{w_2}, \\vv{v_1}\\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1} = \\bm 1\\\\0\\\\1\\\\0 \\em - \\frac{-2}{5}\\bm -2\\\\1\\\\0\\\\0 \\em = \\bm 1/5 \\\\ 2/5 \\\\ 1 \\\\ 0\\em\n",
-    "\\end{align*}\n",
-    "\n",
-    "Finally, we compute $\\vv{v_3}$:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\vv{v_3} &= \\vv{w_3} - \\frac{\\langle \\vv{w_3} ,\\vv{v_1}\\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle}\\vv{v_1} - \\frac{\\langle \\vv{w_3}, \\vv{v_2}\\rangle}{\\langle \\vv{v_2}, \\vv{v_2}\\rangle}\\vv{v_2} \\\\\n",
-    "    &= \\bm 3\\\\0\\\\0\\\\1\\em - \\frac{-6}{5}\\bm -2\\\\1\\\\0\\\\0 \\em - \\frac{3/5}{6/5} \\bm 1/5\\\\2/5\\\\1\\\\0 \\em\\\\\n",
-    "    &= \\bm 1/2\\\\1\\\\-1/2\\\\1 \\em \n",
-    "\\end{align*}\n",
-    "\n",
-    "To get our hands on an orthonormal basis, we simply normalize the $\\vv{v_i}$ by dividing them by their norms. An orthonormal basis is given by $\\vv{u_1}, \\vv{u_2}, \\vv{u_3}$, where\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\vv{u_1} = \\frac{\\vv{v_1}}{\\|\\vv{v_1}\\|} = \\boxed{\\frac{1}{\\sqrt 5} \\bm -2\\\\1\\\\0\\\\0\\em}\\\\\n",
-    "    \\vv{u_2} = \\frac{\\vv{v_2}}{\\|\\vv{v_2}\\|} = \\boxed{\\frac{1}{\\sqrt{6/5}} \\bm 1/5 \\\\ 2/5 \\\\ 1 \\\\ 0\\em }\\\\\n",
-    "    \\vv{u_3} = \\frac{\\vv{v_3}}{\\|\\vv{v_3}\\|} = \\boxed{\\frac{1}{\\sqrt{5/2}} \\bm 1/2\\\\1\\\\-1/2\\\\1\\em }\n",
-    "\\end{align*}\n",
-    "\n",
-    "```\n",
-    "````\n",
+    "If we think about the map $\\vv x \\mapsto Q \\vv x$ defined by multiplication with an orthogonal matrix as rotating and/or reflectingthe vector $\\vv x$, then the following property should not be surprising:\n",
     "\n",
     ":::{important}\n",
-    "The orthogonal basis you obtain from the GSP does depend on the order of the vectors in the original basis; different orderings will produce different bases, but they will all span the same space as the original basis.\n",
+    "The product of two orthogonal matrices is also orthogonal!\n",
     ":::\n",
     "\n",
+    "Before grinding through some algebra, let's think about this through the lens of rotation and reflections. Multiply $\\vv x$ by a product of orthogonal matrices $Q_2Q_1$ is the same as first rotation/reflecting $\\vv x$ by $Q_1$ to obtain $Q_1 \\vv x$, and then rotating/reflecting $Q_1 \\vv x$ by $Q_2$ to get $Q_2 Q_1 \\vv x$. Now a sequence of rotations and reflections is still ultimately a rotation and/or reflection so we must have $Q_2 Q_1 \\vv x = Q \\vv x$ for some orthogonal $Q = Q_2 Q_1$.\n",
+    "\n",
+    "Let's check that this intuition carries over in the math. Since $Q_1$ and $Q_2$ are orthogonal, we have that\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    Q^\\top_1 Q_1 = I = Q_2^\\top Q_2.\n",
+    "\\end{align*}\n",
+    "\n",
+    "Let's check that $(Q_1Q_2)^\\top (Q_1Q_2) = I$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    (Q_1Q_2)^\\top (Q_1Q_2) = Q_2^\\top \\underbrace{Q_1^\\top Q_1}_{I}Q_2 = \\underbrace{Q_2^\\top Q_2}_I = I\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore $(Q_1 Q_2)^{-1} = (Q_1 Q_2)^\\top$, and we indeed have $Q_1Q_2$ is orthogonal.\n",
+    "\n",
     ":::{important}\n",
-    "We know that every vector space has a basis. The GSP tells us something very important: given any basis for a finite dimensional [inner product space](#inner-product-space-defn) space, we can always \"orthogonalize\" it. That is, every finite dimensional inner product space has an orthonormal basis!\n",
-    ":::\n"
+    "\n",
+    "This multiplicative property combined with the fact that the inverse of an orthogonal matrix is orthogonal (why?) says that the set of all orthogonal matrices (of dimension $n$) forms a *group* (under matrix multiplication). \n",
+    "\n",
+    "Group theory underlies much of modern physics and quantum mechanics and plays a central role in robotics. Although we will not spend too much time on groups in this class, you are sure to see them again in the future. \n",
+    "\n",
+    "The aforementioned *orthogonal group* in particular is central to rigid body mechanics, atomic structure and chemistry, and computer graphics, among many other applications.\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The QR Factorization"
    ]
   }
  ],
